# LiteideX

./: .gitignore  README.md
liteidex/: CMakeLists.txt  CMakeUserPresets.json  build&pack.bat  liteide_de.ts  liteide_fr.ts  liteide_ja.ts  liteide_ru.ts  liteide_tr.ts  liteide_uk.ts  liteide_zh.ts  liteide_zh_TW.ts  tag.bat  update.ts.cmd  windows_deploy.cmake
liteidex/deploy/liteapp/mimetype/: liteeditor.xml
liteidex/deploy/liteapp/qss/: gorm.qss  onedarkpro-dark.qss  onedarkpro-white.qss  solarized-dark.qss  vs-ayu.qss  vs-blue-hdpi.qss  vs-dark-hdpi.qss  vs-dark.qss  vs-eva-dark.qss  vs-eva-light.qss  vs-shadesofpurple.qss  vs-sublime-material.qss  vs-white-hdpi.qss  vs-white.qss  vs-winter-is-coming.qss
liteidex/deploy/litebuild/: gomod.xml  gosrc.xml
liteidex/deploy/liteeditor/color/: gorm.xml  green.xml  onedarkpro-dark.xml  onedarkpro-white.xml  solarized-dark.xml  vs-ayu.xml  vs-blue-hdpi.xml  vs-eva-dark.xml  vs-eva-light.xml  vs-shadesofpurple.xml  vs-sublime-material.xml  vs-white-hdpi.xml  vs-winter-is-coming.xml
liteidex/deploy/translations/: liteide_de.qm  liteide_fr.qm  liteide_ja.qm  liteide_ru.qm  liteide_tr.qm  liteide_uk.qm  liteide_zh.qm  liteide_zh_TW.qm
liteidex/deploy/welcome/css/: gorm.css  onedarkpro-dark.css  onedarkpro-white.css  solarized-dark.css  vs-ayu.css  vs-blue-hdpi.css  vs-eva-dark.css  vs-eva-light.css  vs-shadesofpurple.css  vs-sublime-material.css  vs-white-hdpi.css  vs-winter-is-coming.css
liteidex/deploy/welcome/en/: changes.md  liteide.html  readme.md  welcome.html
liteidex/deploy/welcome/zh_CN/: changes.md  liteide.html  readme.md  welcome.html
liteidex/src/: CMakeLists.txt
liteidex/src/api/: CMakeLists.txt
liteidex/src/api/docbrowserapi/: CMakeLists.txt
liteidex/src/api/golangastapi/: CMakeLists.txt
liteidex/src/api/golangdocapi/: CMakeLists.txt
liteidex/src/api/liteapi/: CMakeLists.txt  liteapi.h
liteidex/src/api/litebuildapi/: CMakeLists.txt
liteidex/src/api/litedebugapi/: CMakeLists.txt
liteidex/src/api/liteeditorapi/: CMakeLists.txt
liteidex/src/api/liteenvapi/: CMakeLists.txt  liteenvapi.h
liteidex/src/api/litefindapi/: CMakeLists.txt
liteidex/src/api/litettyapi/: CMakeLists.txt
liteidex/src/api/quickopenapi/: CMakeLists.txt
liteidex/src/api/terminalapi/: CMakeLists.txt
liteidex/src/liteapp/: CMakeLists.txt  aboutdialog.ui  editormanager.cpp  editormanager.h  filemanager.cpp  filemanager.h  liteapp.cpp  liteapp.h  liteappoption.cpp  main.cpp  mainwindow.cpp  openeditorswidget.cpp  openeditorswidget.h  optionsbrowser.cpp  pluginsdialog.cpp  projectmanager.cpp  projectmanager.h  sidewindowstyle.cpp  splitfolderwindow.cpp  splitwindowstyle.cpp
liteidex/src/liteide/: CMakeLists.txt
liteidex/src/plugins/: CMakeLists.txt
liteidex/src/plugins/bookmarks/: CMakeLists.txt  bookmarkmodel.cpp
liteidex/src/plugins/dlvdebugger/: CMakeLists.txt  dlvdebugger.cpp  dlvrpcdebugger.cpp
liteidex/src/plugins/fakevimedit/: CMakeLists.txt
liteidex/src/plugins/filebrowser/: CMakeLists.txt
liteidex/src/plugins/golangast/: CMakeLists.txt  golangast.cpp
liteidex/src/plugins/golangcode/: CMakeLists.txt  golangcode.cpp  golangcodeplugin.cpp
liteidex/src/plugins/golangdoc/: CMakeLists.txt  finddocwidget.cpp  golangdoc.cpp
liteidex/src/plugins/golangedit/: CMakeLists.txt  golangedit.cpp
liteidex/src/plugins/golangfmt/: CMakeLists.txt
liteidex/src/plugins/golangpackage/: CMakeLists.txt
liteidex/src/plugins/golangplay/: CMakeLists.txt
liteidex/src/plugins/golangpls/: CMakeLists.txt  golangpls.cpp  golangpls.h  golangpls_global.h  golangplsplugin.cpp  golangplsplugin.h
liteidex/src/plugins/golangpresent/: CMakeLists.txt
liteidex/src/plugins/helloliteide/: CMakeLists.txt  helloliteide_global.h  helloliteideplugin.cpp  helloliteideplugin.h
liteidex/src/plugins/imageeditor/: CMakeLists.txt  imageeditor.cpp  imageeditorwidget.cpp  imageeditorwidget.h
liteidex/src/plugins/jsonedit/: CMakeLists.txt  jsonedit.cpp
liteidex/src/plugins/litebuild/: CMakeLists.txt  litebuild.cpp  litebuild.h  litebuildplugin.cpp
liteidex/src/plugins/litedebug/: CMakeLists.txt  debugwidget.cpp  debugwidget.h  litedebug.cpp
liteidex/src/plugins/liteeditor/: CMakeLists.txt  liteeditoroption.cpp  liteeditoroption.h  liteeditoroption.ui  liteeditorwidget.cpp  liteeditorwidgetbase.cpp
liteidex/src/plugins/liteenv/: CMakeLists.txt  envmanager.cpp  envmanager.h
liteidex/src/plugins/litefind/: CMakeLists.txt  filesearch.cpp
liteidex/src/plugins/litetty/: CMakeLists.txt
liteidex/src/plugins/markdown/: CMakeLists.txt
liteidex/src/plugins/qsqleditor/: CMakeLists.txt  qsqleditor.cpp  qsqleditor.h  qsqleditor.ui  qsqleditorplugin.cpp  qsqleditorplugin.h  qsqlfilefactory.cpp  qsqlfilefactory.h  sqlitefile.cpp  sqlitefile.h  tableviewwidget.cpp
liteidex/src/plugins/quickopen/: CMakeLists.txt  quickopenfiles.cpp  quickopenhelp.cpp  quickopenmanager.cpp  quickopenmanager.h  quickopenwidget.cpp
liteidex/src/plugins/rustedit/: CMakeLists.txt
liteidex/src/plugins/terminal/: CMakeLists.txt
liteidex/src/plugins/welcome/: CMakeLists.txt  litedoc.cpp  welcomebrowser.cpp
liteidex/src/utils/: CMakeLists.txt
liteidex/src/utils/colorstyle/: CMakeLists.txt
liteidex/src/utils/dlvclient/: CMakeLists.txt  dlvclient.cpp
liteidex/src/utils/documentbrowser/: CMakeLists.txt
liteidex/src/utils/editorutil/: CMakeLists.txt
liteidex/src/utils/extension/: CMakeLists.txt
liteidex/src/utils/filesystem/: CMakeLists.txt
liteidex/src/utils/fileutil/: CMakeLists.txt  fileutil.cpp
liteidex/src/utils/folderview/: CMakeLists.txt  multifolderview.cpp
liteidex/src/utils/golangapi/: CMakeLists.txt
liteidex/src/utils/htmlutil/: CMakeLists.txt
liteidex/src/utils/iconutil/: CMakeLists.txt
liteidex/src/utils/mimetype/: CMakeLists.txt
liteidex/src/utils/modelproject/: CMakeLists.txt
liteidex/src/utils/navigate/: CMakeLists.txt
liteidex/src/utils/processex/: CMakeLists.txt
liteidex/src/utils/symboltreeview/: CMakeLists.txt
liteidex/src/utils/tabwidget/: CMakeLists.txt
liteidex/src/utils/textoutput/: CMakeLists.txt  (+1 more)
(+2 files in other folders)
