add_subdirectory(welcome)
add_subdirectory(liteenv)
add_subdirectory(litedebug)
add_subdirectory(litebuild)
add_subdirectory(liteeditor)
add_subdirectory(litefind)

add_subdirectory(litetty)
add_subdirectory(quickopen)
add_subdirectory(filebrowser)
add_subdirectory(golangast)
add_subdirectory(golangedit)

add_subdirectory(golangfmt)
add_subdirectory(golangcode)
add_subdirectory(golangdoc)
add_subdirectory(golangplay)
add_subdirectory(golangpackage)
add_subdirectory(golangpresent)
add_subdirectory(markdown)
add_subdirectory(jsonedit)
add_subdirectory(rustedit)
add_subdirectory(dlvdebugger)
add_subdirectory(fakevimedit)
add_subdirectory(bookmarks)
add_subdirectory(imageeditor)
add_subdirectory(terminal)

add_subdirectory(helloliteide)