#SUBDIRS = \
#    fileutil \
#    mimetype \
#    extension \
#    textoutput \
#    symboltreeview \
#    modelproject \
#    processex \
#    colorstyle \
#    documentbrowser \
#    htmlutil \
#    golangapi \
#    filesystem \
#    editorutil \
#    folderview \
#    iconutil \
#    dlvclient \
#    navigate \
#    tabwidget \
#    vterm

add_subdirectory(colorstyle)