#SUBDIRS = \
#    fileutil \
#    mimetype \
#    extension \
#    textoutput \
#    symboltreeview \
#    modelproject \
#    processex \
#    colorstyle \
#    documentbrowser \
#    htmlutil \
#    golangapi \
#    filesystem \
#    editorutil \
#    folderview \
#    iconutil \
#    dlvclient \
#    navigate \
#    tabwidget \
#    vterm

add_subdirectory(fileutil)
add_subdirectory(mimetype)
add_subdirectory(extension)
add_subdirectory(textoutput)
add_subdirectory(symboltreeview)
add_subdirectory(modelproject)
add_subdirectory(processex)
add_subdirectory(colorstyle)
add_subdirectory(documentbrowser)
add_subdirectory(htmlutil)
add_subdirectory(golangapi)
add_subdirectory(filesystem)
add_subdirectory(editorutil)
add_subdirectory(folderview)
add_subdirectory(iconutil)
add_subdirectory(dlvclient)
add_subdirectory(navigate)
add_subdirectory(tabwidget)
add_subdirectory(vterm)